# fnt

./: .gitignore  CLAUDE.md  CONTRAST_ENHANCEMENT_REMOVAL.py  README.md  ToDo.md  fnt.spec  pyproject.toml  pyproject_BACKUP_78405.toml  pyproject_LOCAL_78405.toml  pyproject_REMOTE_78405.toml  setup.py  test_enhanced_video_processing.py  test_gui_cleanup.py  test_sam2_tracker.py  test_video_gui.py  test_video_inference_gui.py  test_video_processing.py
.github/workflows/: build.yml
ExampleData/: ch12025-11-11_16-09-35_00308_usv_detections.csv  ch12025-11-11_16-09-35_00308_usv_dsp.csv  ch12025-11-11_16-19-35_00309_usv_detections.csv  ch4_2025-03-28_05-13-13_0000032_usv_dsp.csv
ExampleImaging/: Snap_312_20260206.json
fnt/: __init__.py  gui_pyqt.py
fnt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
fnt/DoricFP/: __init__.py  doric_processor.py  doric_processor_pyqt.py  explore_doric_structure.py
fnt/DoricFP/ReferenceMaterials/: CV_dFF_Signal.m  PhotometryBehaviorCombinedVideo (2).m  PhotometryBehaviorCombinedVideo.m  behavior_video_plot_together.m  filteredfitcaldff.m  fitcaldff.m
fnt/fed3/: __init__.py  fed_comms.py  fed_device.py  fed_export.py  fed_plot.py  fed_serial.py  fed_widgets.py  timesync.py
fnt/gitProcessing/: file_dialog_helper.py  gitFileSplit.py  github_csv_transfer_pyqt.py
fnt/imaging/: __init__.py  czi_reader.py  czi_viewer_pyqt.py  image_processor.py  quantification.py  quantification_pyqt.py  quantification_widgets.py
fnt/labgym/: generate_training_images_pyqt.py
fnt/musestudio/: __init__.py  live_plot.py  muse_stream.py  musestudio_pyqt.py
fnt/rfid/: README.md  __init__.py  rfid_preprocessing_pyqt.py  rfid_worker.py
fnt/rfid/config/: __init__.py  config_manager.py  defaults.py
fnt/rfid/core/: __init__.py  bout_detector.py  displacement.py  edgelist.py  file_readers.py  gbi_generator.py  hinde_index.py  preprocessor.py  social_network.py  utils.py
fnt/sleapProcessing/: batch_convert_slp_to_csv_h5.py  batch_render_videos_pyqt.py  batch_slp_retrack.py  batch_video_inference_and_track.py  batch_video_inference_only.py  batch_video_inference_only_pyqt.py  sleap_inference_tool_pyqt.py  sleap_roi_tool_pyqt.py
fnt/usv/: audio_trim_pyqt.py  audio_widgets.py  classic_audio_detector.py  compress_wavs_pyqt.py  deep_audio_detector.py  mad_pyqt.py  usv_classifier.py  usv_detector_pyqt.py  usv_inspector_pyqt.py  usv_studio_pyqt.py
fnt/usv/usv_detector/: MAD_README.md  __init__.py  batch.py  config.py  dsp_detector.py  fnt_mask_store.py  gpu_spectrogram.py  gpu_utils.py  io.py  labels_io.py  mad_dataset.py  mad_examples.py  mad_inference.py  mad_labels.py  mad_project.py  mad_training.py  spectrogram.py  training_plot.py  yolo_detector.py
fnt/uwb/: 0_ToDo.md  behavior_detection.py  proximity_detection.py  uwb_animate.py  uwb_behavioral_analysis.py  uwb_plots copy.py  uwb_preprocessing_pyqt.py  uwb_quick_plots_pyqt.py  uwb_quick_visualization_pyqt.py
fnt/videoProcessing/: behavior_scoring_studio_pyqt.py  videoDownsample.py  videoProcessing.py  video_concatenate.py  video_concatenate_pyqt.py  video_reencode.py  video_trim.py  video_trim_pyqt.py  video_trim_pyqt_old.py
fnt/videoTracking/: QUICKSTART.md  README.md  __init__.py  ldb_tracker_gui.py  mask_pose_tracker_gui.py  mask_tracker_annotator.py  mask_tracker_augmentation.py  mask_tracker_gui.py  mask_tracker_inference.py  mask_tracker_pipeline_pyqt.py  mask_tracker_training.py  oft_tracker_gui.py  sam2_annotator_pyqt.py  sam2_checkpoint_manager.py  sam2_tracker.py  sam_tracker_base.py  silhouette_extractor.py  simple_tracker_gui.py  simple_tracker_gui_v2.py  yolo_inference.py  yolo_training.py
