[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fnt"
version = "0.1.6"
description = "Toolbox for preprocessing and analyzing neurobehavioral field data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Caleb Vogt", email = "vogtneuroscience@gmail.com"},
]
keywords = ["neuroscience", "behavior", "RFID", "USV", "imaging", "field-research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    # Core scientific stack
    "numpy>=1.24",
    "pandas",
    "scipy",
    "matplotlib",
    "pytz",
    # GUI
    "PyQt5",
    # I/O
    "h5py",
    "Pillow",
    "soundfile",
    "opencv-python",
    # USV detection + classification
    "sounddevice",
    "scikit-learn",
    "joblib",
    "ultralytics>=8.3.0",
    "sahi>=0.11.18",
    # MAD (Mask Audio Detector) — U-Net segmentation
    "torch>=2.5.1",
    "segmentation-models-pytorch>=0.3.4",
    # USB serial communication for FED devices
    "pyserial",
    # SAM2 — AI-assisted mask annotation
    "sam-2 @ git+https://github.com/facebookresearch/sam2.git",
    # OCR — timestamp extraction from DVR video overlays
    "easyocr",
    # Timezone handling
    "pytz",
]

[project.optional-dependencies]
imaging = [
    "aicspylibczi>=3.1.1",
    "aicsimageio",
    "fsspec",
    "scikit-image",
]
rfid = [
    "networkx>=3.0",
]
tracking = [
    "torchvision>=0.20.1",
    "pycocotools>=2.0.6",
]
all = [
    "fnt[imaging,tracking]",
]

[project.scripts]
fnt = "fnt.gui_pyqt:main"

[project.urls]
Homepage = "https://github.com/calebvogt/fnt"
Issues = "https://github.com/calebvogt/fnt/issues"

[tool.setuptools.packages.find]
include = ["fnt*"]

[tool.setuptools.package-data]
fnt = ["../icons/*.ico", "../icons/*.png"]
